--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h3 class="card-header text-uppercase">Search By City</h3>
         <form id="user-form" class="card-body">
         <label class="form-label" for="username">City</label>
-        <input name="username" id="username" type="text" autofocus="true" class="form-input" />
+        <input name="city" id="city" type="text" autofocus="true" class="form-input" />
         <button type="submit" class="btn">Get Weather</button>
         </form>
     </div>
