Change user to city

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <div class="card">
         <h3 class="card-header text-uppercase">Search By City</h3>
-        <form id="user-form" class="card-body">
-        <label class="form-label" for="username">City</label>
+        <form id="city-search-form" class="card-body">
+        <label class="form-label" for="city">City</label>
         <input name="city" id="city" type="text" autofocus="true" class="form-input" />
         <button type="submit" class="btn">Get Weather</button>
         </form>
