--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 </main>
 
-<script src="./assets/js/homepage.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 
 </html>
