Removed base html

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <h3 id="city-name" class="card-header text-uppercase">Result:</h3>
             <div id="weather-data" class="card-body">
                 <div class="card">
-                    <h3 id="day-1" class="card-header text-uppercase weather-day">Day-1</h3>
+                    <h3 id="day-1" class="card-header text-uppercase weather-day"></h3>
                     <div id="search-history" class="card-body">
-                    <div class="form-label">Sunny</div>
+                    <div class="form-label"></div>
                     </div>
                 </div>
             </div>
